--- a/other and info/yaml/costmap.yaml
+++ b/other and info/yaml/costmap.yaml
@@ -1,10 +1,10 @@
 global_frame: odom
 robot_base_frame: base_link
-update_frequency: 10.0  # de 10.0
+update_frequency: 5.0  # de 10.0
 publish_frequency: 1.0 # !!! de 1.0       ¡¡¡
 
 #Pisadas
-footprint: [[0.1, 0.25], [0.1, -0.25], [-0.4,0.25], [-0.4,-0.25]]   #
+#footprint: [[0.1, 0.25], [0.1, -0.25], [-0.4,0.25], [-0.4,-0.25]]   #
 
 #set if you want the voxel map published
 publish_voxel_map: true         # (true) permite publicar cuadros 3D para representaciones como marcado, libre y desconocido
@@ -13,21 +13,21 @@ publish_voxel_map: true         # (true) permite publicar cuadros 3D para repres
 static_map: false
 
 rolling_window: true            # con mapa estático se le asigna true
-width: 25.0
-height: 25.0
+width: 6.0
+height: 6.0
 resolution: 0.05                # resolución del mapa en [m/cell]
 #end - COMMENT these lines if you set static_map to true
 
 map_type: costmap               # tipo de mapa
 track_unknown_space: true       # seguir un espacio no conocido
 
-transform_tolerance: 0.2        # (0.3) tolerancia de transformadas en [s]
+transform_tolerance: 0.3        # (0.3) tolerancia de transformadas en [s]
 obstacle_range: 4.0             # máximo rango en [m] para insertar obstáculos usando el sensor de visión
 min_obstacle_height: 0.0        # altura mínima obstáculos
 max_obstacle_height: 2.0        # idem máxima
 raytrace_range: 4.5             # máximo rango en [m] para quitar obstáculos
-robot_radius: 0.3               # radio del robot en 0.3 [m]
-inflation_radius: 0.3           # (0.2) radio de inflación de obstáculos en [m]
+robot_radius: 0.35               # radio del robot en 0.3 [m]
+inflation_radius: 0.75           # (0.2) radio de inflación de obstáculos en [m]
 cost_scaling_factor: 2.0        # es un factor aplicado a los valores de costes durante la inflación
 lethal_cost_threshold: 100      # valor umbral al cual considerar un costo letal cuando se lee un mapa desde el servidor de mapas
 observation_sources: scan       
