--- a/other and info/yaml/mapper.yaml
+++ b/other and info/yaml/mapper.yaml
@@ -1,11 +1,11 @@
 ### Mapper ################################################
 
-grid_resolution: 0.1 # 0.025
+grid_resolution: 0.05 # (0.1) 0.025
 range_threshold: 10.0
 map_update_rate: 1 # parece ser tiempo en segundos para actualizar mapa( de 5, en 20) (probar cambio ++)
 publish_pose_graph: true
 max_covariance: 0.01
-transform_publish_period: 0.125 # (default 0.1 al parecer) Tiempo que se tarda en [s] entre publicar las transformadas
+transform_publish_period: 0.13 # ( de 0.125 default 0.1 al parecer) Tiempo que se tarda en [s] entre publicar las transformadas
 min_map_size: 20 #
 
 ### Localizer #############################################
